unpackaged/objects/copadovsm__Value_Stream_Map_Metric__c.object
<CustomObject>
	<fields>
		<fullName>copadovsm__Calculation_Method__c</fullName>
		<label>Calculation Method</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Sum</fullName>
				</value>
				<value>
					<fullName>Avg</fullName>
					<label>Average</label>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__Field_Api__c</fullName>
		<label>Field Api</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Order__c</fullName>
		<label>Order</label>
		<precision>2</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copadovsm__Value_Stream_Map__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Value Stream Map</label>
		<referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
		<relationshipLabel>Value Stream Map Metrics</relationshipLabel>
		<relationshipName>Value_Stream_Map_Metrics</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Value Stream Map Metric</label>
	<nameField>
		<label>Value Stream Map Metric Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Value Stream Map Metrics</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>